Push Navbar search to right & stop "My Profile" link text from wrapping

--- a/src/main/resources/static/sass/layout/_navbar.scss
+++ b/src/main/resources/static/sass/layout/_navbar.scss
@@ -2,6 +2,7 @@
   height: 6rem;
   margin-bottom: 0 !important;
   z-index: 5000;
+
   @include respond(tab-port){
     height: 5rem;
   }
@@ -13,7 +14,6 @@
   }
   &__search{
     width: 100%;
-
     &-input {
       width: 30%;
       height: 4rem;
@@ -50,4 +50,11 @@
       }
     }
   }
+}
+#myprofile {
+  min-width: 10rem;
+  flex-grow: ;
+}
+#searchbar {
+
 }
